<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#F0EFEF"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RadioGroup
        android:clickable="false"
        android:id="@+id/radiogroup"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="6"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:clickable="false"
            android:id="@+id/radio_main_tab_manager"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="健康管理"
            android:button="@null"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/main_buttom_tab_1"
            android:gravity="center"
            android:textColor="@drawable/tab_txtcolor"
            android:textSize="12sp"
            android:checked="true" />

        <RadioButton
            android:clickable="false"
            android:id="@+id/radio_main_tab_friend"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_health_circle"
            android:button="@null"
            android:drawableTop="@drawable/main_buttom_tab_2"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textColor="@drawable/tab_txtcolor"
            android:textSize="12sp"
            android:checked="false" />

        <RadioButton
            android:clickable="false"
            android:id="@+id/radio_main_tab_tourism"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_tourism"
            android:button="@null"
            android:drawableTop="@drawable/main_buttom_tab_6"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textColor="@drawable/tab_txtcolor"
            android:textSize="12sp"
            android:checked="false" />

        <RadioButton
            android:clickable="false"
            android:id="@+id/radio_main_tab_surrounding"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_surrounding"
            android:button="@null"
            android:drawableTop="@drawable/main_buttom_tab_3"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textColor="@drawable/tab_txtcolor"
            android:textSize="12sp"
            android:checked="false" />


        <RadioButton
            android:clickable="false"
            android:id="@+id/radio_main_tab_shop"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_health_store"
            android:button="@null"
            android:drawableTop="@drawable/main_buttom_tab_4"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textColor="@drawable/tab_txtcolor"
            android:textSize="12sp"
            android:checked="false" />

        <RadioButton
            android:clickable="false"
            android:id="@+id/radio_main_tab_my"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="我的"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/main_buttom_tab_5"
            android:gravity="center"
            android:checked="false"
            android:textSize="12sp"
            android:textColor="@drawable/tab_txtcolor"
            />
    </RadioGroup>
</LinearLayout>
</layout>