<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_login_icon"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="40dp"
                android:src="@mipmap/icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="45dp"
                    android:src="@mipmap/phone" />

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="58dp"
                    android:background="@null"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="68dp"
                android:layout_marginRight="58dp"
                android:layout_marginTop="13dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="45dp"
                    android:src="@mipmap/password" />

                <EditText
                    android:id="@+id/edit_userpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="58dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="68dp"
                android:layout_marginRight="58dp"
                android:layout_marginTop="13dp"
                android:background="@color/gray" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/selector_login_btn"
                android:text="@string/txt_login"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:layout_marginTop="14dp">

                <TextView
                    android:id="@+id/tv_start_registr"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="left"
                    android:text="新用户注册"
                    android:textColor="#666666"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_find_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="忘记密码"
                    android:textColor="#666666"
                    android:textSize="14dp" />


            </FrameLayout>

        </LinearLayout>

    </ScrollView>
</layout>